--- a/assets/scss/components/_fixed-menu.scss
+++ b/assets/scss/components/_fixed-menu.scss
@@ -17,6 +17,7 @@
     @media (max-width: $md-tablet) {
         top: unset;
         position: relative;
+        right: 0;
     }
 
     &__list {
